--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:25.4.0'
     implementation 'com.android.support:recyclerview-v7:25.4.0'
 
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 
     testImplementation 'junit:junit:4.12'
 }
